[project]
name = "personalization-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.48.2",
    "fastapi>=0.119.0",
    "feedparser>=6.0.12",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-naver-community>=0.2.0",
    "langchain-openai>=0.3.35",
    "langfuse>=3.6.2",
    "langgraph>=0.6.10",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "uvicorn>=0.37.0",
]
